2005-01-21 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def, src/src.vcproj: MSVC sync
	* doc/gpsimWin32.html: gpsim works with flex 2.4.31

2005-01-20 Scott Dattalo <scott@dattalo.com>
	* src/breakpoints.cc: Trigger actions were not printing
	execution breakpoint messages.
	* src/registers.h, src/registers.cc: Added a skip_start function to
	the program counter.

2005-01-19 Scott Dattalo <scott@dattalo.com>
	* src/registers.cc, src/registers.h, src/gpsim_object.cc,
	  src/gpsim_object.h, src/symbol.cc, src/symbol.h,
	  src/value.cc, src/value.h: Added the 'toBitStr' method
	to gpsim_object and propopogated the change through the
	derived classes. Also, the register class now calls get() to 
	obtain the value printed with toString and toBitStr instead
	of directly using its value object.

2005-01-17 Scott Dattalo <scott@dattalo.com>
	* src/gpsim_time.h, src/gpsim_time.cc: Finished the StopWatch
	class.
	* src/value.cc, src/value.h, src/attributes.cc, src/attributes.h:
	Added attribute breakpoints. For attributes that can be associated
	with breakpoints, you can now write 'break attribute' to set a
	breakpoint on that attribute.
	* cli/Makefile.am, cli/cmd_break.cc, cli/cmd_break.h,
	cli/cmd_help.cc, cli/command.cc, cli/parse.yy: The 'stopwatch'
	command is now handled by attributes. Added the following
	attributes:
	stopwatch, stopwatch.enable, stopwatch.direction,
	stopwatch.rollover.
	The 'stopwatch' attribute supports breakpoints, so the 'break
	stopwatch'  command will break whenever the stopwatch rolls over.

2005-01-15 Scott Dattalo <scott@dattalo.com>
	* src/attributes.cc, src/attributes.h: New files to support gpsim
	attributes.
	* src/Makefile.am, src/makefile.mingw: added the new files to the
	make files.

2005-01-14 Scott Dattalo <scott@dattalo.com>
	* gpsim/main.cc, gui/gui_main.cc: The gtk main loop is now started
	even if the command line option --cli is specified. This way, the
	GIOChannels will still operate.
